# Robot-Navigation-Lecture

./: README.md
Astar,RRT/: astar_planner.py  rrt_planner.py
f1tenth-riders-HW/pkg/src/pkg/: drivers_HW.py  main.py
f1tenth_riders-HW-ICP/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md
f1tenth_riders-HW-ICP/compose/agent/: Dockerfile  start.sh
f1tenth_riders-HW-ICP/compose/submit/: Dockerfile  start.sh
f1tenth_riders-HW-ICP/f1tenth_gym_ros/: CMakeLists.txt
f1tenth_riders-HW-ICP/f1tenth_gym_ros/launch/: gym_bridge.launch
f1tenth_riders-HW-ICP/f1tenth_gym_ros/maps/: Oschersleben.yaml  SOCHI.yaml  SOCHI_OBS.yaml
f1tenth_riders-HW-ICP/f1tenth_gym_ros/scripts/: gym_bridge_bare.py
f1tenth_riders-HW-ICP/gym/f110_gym/envs/: f110_env.py  rendering.py
f1tenth_riders-HW-ICP/pkg/: CMakeLists.txt  L_Pose.npy  requirements.txt
f1tenth_riders-HW-ICP/pkg/launch/: f1tenth_gym_agent.launch
f1tenth_riders-HW-ICP/pkg/msg/: Observation.msg
f1tenth_riders-HW-ICP/pkg/nodes/: f1tenth_ros_agent.py
f1tenth_riders-HW-ICP/pkg/src/pkg/: ICP.py  drivers.py  main.py
f1tenth_riders-HW-ICP/scripts/: submit-docker-compose.yml  submit-with-docker.sh  submit.sh
wall_following_assignment/python/: wall_follower.py
